--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A blank canvas for an isomorphic app",
   "scripts": {
     "start": "npm run dev:start",
-    "dev:start": "nodemon --ignore lib --exec babel-node src/server",
-    "prod:build": "rimraf lib && node-sass scss -o public/css --output-style compressed && babel src -d lib --ignore .test.js",
-	 "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
-	 "prod:stop": "pm2 delete server",
-    "test": "eslint src && jest --coverage",
-    "prepush": "npm test && npm run prod:build"
+    "dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
+	 "dev:wds": "webpack-dev-server --progress",
+    "prod:build": "rimraf lib dist && node-sass scss -o public/css --output-style compressed && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
+    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
+    "prod:stop": "pm2 delete server",
+	 "lint": "eslint src webpack.config.babel.js --ext .js.jsx",
+    "test": "npm run lint && jest --coverage",
+    "prepush": "npm run test && npm run prod:build"
   },
   "repository": {
     "type": "git",
@@ -18,12 +20,15 @@
   "author": "MBrent",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "compression": "^1.7.1",
     "express": "^4.16.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.1",
     "eslint": "^4.10.0",
@@ -36,6 +41,8 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
     "pm2": "^2.7.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
